@@ -2,4 +2,4 @@ Collector-Script: bin-pkg-control
 Info: This script extracts the contents of control.tar into the control/
  and creates control-index as well.
 Type: binary, udeb
-Version: 1
+Version: 2
