@@ -1,5 +1,5 @@
 Collector-Script: index
 Info: This script create an index file of the contents of a package.
 Type: source, binary, udeb
-Version: 2
+Version: 3
 
